<div class="page-content"><div class="container-fluid">
<div class="page-title-box"><h4>Accounts Payable</h4><p class="text-muted">Record supplier payments, allocate advances, and reverse posted payments with an auditable reason.</p></div>
@if($errors->has('allocation'))<div class="alert alert-danger">{{ $errors->first('allocation') }}</div>@endif
@if(session('message'))<div class="alert alert-{{ session('alert-type', 'info') }}">{{ session('message') }}</div>@endif
<div class="card mb-3"><div class="card-body"><h5>New supplier payment</h5><form method="POST" action="{{ route('procurement.payments.store') }}">@csrf<div class="row g-2">
<div class="col-md-2"><input name="payment_no" class="form-control" value="{{ old('payment_no', 'PAY-'.now()->format('YmdHis')) }}" required placeholder="Payment no."></div>
<div class="col-md-3"><select name="supplier_id" class="form-select" required><option value="">Select supplier</option>@foreach($suppliers as $supplier)<option value="{{ $supplier->id }}" @selected(old('supplier_id') == $supplier->id)>{{ $supplier->name }}</option>@endforeach</select></div>
<div class="col-md-4"><select name="purchase_invoice_id" class="form-select"><option value="">Unallocated supplier advance</option>@foreach($outstanding as $invoice)<option value="{{ $invoice->id }}" @selected(old('purchase_invoice_id') == $invoice->id)>{{ $invoice->invoice_no }} — {{ $invoice->supplier->name }} — outstanding {{ number_format($invoice->outstanding_amount, 2) }}</option>@endforeach</select></div>
<div class="col-md-2"><input name="amount" type="number" min="0.01" step="0.000001" class="form-control" placeholder="Amount" required></div><div class="col-md-2"><input name="currency_code" maxlength="3" class="form-control" placeholder="Currency"></div><div class="col-md-2"><input name="exchange_rate" type="number" min="0.000001" step="0.000001" class="form-control" placeholder="Rate to base"></div><div class="col-md-2"><input name="payment_date" type="date" value="{{ now()->toDateString() }}" class="form-control" required></div><div class="col-md-2"><select name="method" class="form-select"><option value="bank">Bank</option><option value="cash">Cash</option><option value="transfer">Transfer</option><option value="card">Card</option><option value="other">Other</option></select></div><div class="col-md-2"><input name="reference" class="form-control" placeholder="Reference"></div><div class="col-md-3"><input name="description" class="form-control" placeholder="Description"></div><div class="col-md-1"><button class="btn btn-primary w-100">Submit</button></div>
</div></form></div></div>
<div class="card"><div class="card-body"><div class="table-responsive"><table class="table table-bordered"><thead><tr><th>Payment</th><th>Invoice / allocation</th><th>Supplier</th><th>Amount</th><th>Currency</th><th>Date</th><th>Status</th><th>Action</th></tr></thead><tbody>
@forelse($payments as $payment)<tr><td>{{ $payment->payment_no }}</td><td>@if($payment->purchaseInvoice){{ $payment->purchaseInvoice->invoice_no }}@elseif($payment->allocations->isNotEmpty())@foreach($payment->allocations as $allocation)<div>{{ $allocation->invoice->invoice_no }}: {{ number_format($allocation->amount, 2) }}</div>@endforeach@else<span class="text-warning">Unallocated</span>@endif</td><td>{{ $payment->supplier->name }}</td><td>{{ number_format((float) $payment->amount, 2) }}</td><td>{{ $payment->currency_code ?: optional($payment->purchaseInvoice)->currency_code }}</td><td>{{ optional($payment->payment_date)->format('Y-m-d') }}</td><td>@if($payment->is_reversed)<span class="badge bg-secondary">Reversed</span>@else{{ ucfirst($payment->status) }}@endif</td><td>@if($payment->is_reversed) — @elseif($payment->status === 'pending')<form method="POST" action="{{ route('procurement.payments.approve', $payment->id) }}">@csrf<button class="btn btn-sm btn-outline-success">Approve</button></form>@elseif($payment->status === 'approved' && !$payment->purchase_invoice_id)<form method="POST" action="{{ route('procurement.payments.allocate') }}" class="d-flex gap-1">@csrf<input type="hidden" name="payment_id" value="{{ $payment->id }}"><select name="purchase_invoice_id" class="form-select form-select-sm" required><option value="">Invoice</option>@foreach($outstanding->where('supplier_id', $payment->supplier_id) as $invoice)<option value="{{ $invoice->id }}">{{ $invoice->invoice_no }}</option>@endforeach</select><input name="amount" type="number" min="0.000001" step="0.000001" placeholder="Amount" class="form-control form-control-sm" required><button class="btn btn-sm btn-outline-primary">Allocate</button></form>@elseif($payment->status === 'approved')<form method="POST" action="{{ route('procurement.payments.reverse', $payment->id) }}" class="d-flex gap-1">@csrf<input name="reason" class="form-control form-control-sm" placeholder="Reason" required><button class="btn btn-sm btn-outline-danger">Reverse</button></form>@else — @endif</td></tr>@empty<tr><td colspan="8" class="text-center">No supplier payments.</td></tr>@endforelse
</tbody></table></div>{{ $payments->links() }}</div></div></div></div>
<div class="card mt-3"><div class="card-body"><h5>Payment rejection</h5><p class="text-muted">Reject pending supplier payments before AP/cash journal posting.</p><div class="table-responsive"><table class="table table-sm"><thead><tr><th>Payment</th><th>Supplier</th><th>Action</th></tr></thead><tbody>@foreach($payments as $pendingPayment)@if($pendingPayment->status === 'pending' && !$pendingPayment->is_reversed)<tr><td>{{ $pendingPayment->payment_no }}</td><td>{{ $pendingPayment->supplier->name }}</td><td><form method="POST" action="{{ route('procurement.payments.reject', $pendingPayment->id) }}" class="d-inline">@csrf<input name="rejection_reason" value="Rejected by approver" class="form-control form-control-sm d-inline-block" style="width:170px" required maxlength="2000"><button class="btn btn-outline-warning btn-sm">Reject</button></form></td></tr>@endif @endforeach</tbody></table></div></div></div>
